<resources>
    <string name="app_name">TasteTrove</string>
    <string name="email">Email</string>
    <string name="password_format">Password tidak boleh kurang dari 8 karakter</string>
    <string name="logout">Keluar</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Empty">Story is Empty</string>
    <string name="exit">Are you sure you want to Logout?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="taste">Taste\nThe Culinary\nDelights</string>
    <string name="indulge">Indulge in the Exquisite\nCulinary Delights</string>
    <string name="get_started">Get Started</string>
    <string name="name_food">Name Food</string>
    <string name="description">Description</string>
    <string name="highlight">Highlight</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="submit">Submit</string>
    <string name="nama">Nama</string>
    <string name="tastetrove">TasteTrove</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>
    <string name="welcome_text">WELCOME\nTo TasteTrove"</string>
    <string name="alertMassageLogout">Are you sure exit the Story App?</string>
    <string name="yesLogout">Yes</string>
    <string name="cancelLogout">Cancel</string>
    <string name="food_item">Food Item</string>
    <string name="camera_x">CameraX</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="dialog_button_yes">YES</string>
    <string name="dialog_button_no">NO</string>
    <string-array name="data_food">
        <item>Mie Aceh</item>
        <item>Seruit</item>
        <item>Pelecing Kangkung</item>
        <item>Sate Klathak</item>
        <item>Tumis Bunga Pepaya</item>
        <item>Rendang</item>
        <item>Kepiting Soka</item>
        <item>Soto Kudus</item>
        <item>Soto Banjar</item>
        <item>Sate Ulat Sagu</item>
        <item>Kerak Telor</item>
        <item>Es Pisang Ijo</item>
        <item>Babi Guling</item>
    </string-array>
    <string-array name="data_location">
        <item>Aceh</item>
        <item>Lampung</item>
        <item>Lombok</item>
        <item>Yogyakarta</item>
        <item>Indonesia</item>
        <item>Padang</item>
        <item>Kepiting Soka</item>
        <item>Soto Kudus</item>
        <item>Soto Banjar</item>
        <item>Sate Ulat Sagu</item>
        <item>Kerak Telor</item>
        <item>Es Pisang Ijo</item>
        <item>Babi Guling</item>
    </string-array>
</resources>